Added parent activity to timeline activity and changed name from schedule to timeline

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -222,7 +222,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="info.anwesha2k18.iitp.activities.MainActivity" />
         </activity>
-        <activity android:name=".activities.TimelineActivity"></activity>
+        <activity android:name=".activities.TimelineActivity"
+            android:label="Timeline">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="info.anwesha2k18.iitp.activities.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
